<resources>
    <string name="app_name">ProgMultimedia_LeagueTracker</string>
    <string name="default_username">admin</string>
    <string name="default_password">admin</string>
    <string name="user_name_tagline">%s#%s</string>
    <string name="region_format">Region: %s</string>
    <string name="level_format">Level: %d</string>
    <string name="league_format">%s %s</string>
    <string name="lps_format">LP: %d</string>
    <string name="winrate_format">%dW %dL (%s%%)</string>
    <string name="rank_tier">Rank - Tier</string>
    <string name="league_points">League Points</string>
    <string name="wins_losses">Wins/Losses</string>
    <string name="player_name_tagline">Player Name#Tagline</string>
    <string name="player_region">Player Region</string>
    <string name="player_level">Player Level</string>
    <string name="profile_loading">Loading…</string>
    <string name="nombre_de_usuario">Nombre</string>
    <string name="tag">Tag</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="editar_perfil">Editar Perfil</string>
</resources>